--- a/views/nav.jade
+++ b/views/nav.jade
@@ -5,49 +5,28 @@ nav.navbar.navbar-default.navbar-fixed-top
             |Toggle Navigation
           i.fa.fa-bars
         a.navbar-brand(href="index.html")
-          img(src="/images/logo/bravana-lite-logo.png" alt="Bravana Logo")
+          img(src="/images/logo/logo.png" alt="Bravana Logo")
         #main-nav-collapse.collapse.navbar-collapse
           ul.nav.navbar-nav.main-navbar-nav
             li.dropdown.active
               a.dropdown-toggle(href="#" data-toggle="dropdown")
-                |HOME
-                i.fa.fa-angle-down
-              ul.dropdown-menu(role="menu")
-                li.active
-                  a(href="/index")
-                    |Home Default
-                li
-                  a(href="/homeblog")
-                    |Home Blog
+                |首页
             li.dropdown
               a.dropdown-toggle(href="#" data-toggle="dropdown")
-                |FEATURES
-                i.fa.fa-angle-down
-              ul.dropdown-menu(role="menu")
-                li.active
-                  a(href="index.html")
-                    |Fullscreen Image Background
-                li
-                  a(href="index-blog.html")
-                    |Footer Newsletter (Dark)
+                |产品中心
+            li.dropdown
+              a.dropdown-toggle(href="homeblog" data-toggle="dropdown")
+                |新闻资讯
             li.dropdown
               a.dropdown-toggle(href="#" data-toggle="dropdown")
-                |PAGES
-                i.fa.fa-angle-down
-              ul.dropdown-menu(role="menu")
-                li.active
-                  a(href="index.html")
-                    |About
-                li
-                  a(href="index-blog.html")
-                    |Services
-                li
-                  a(href="index-blog.html")
-                    |Contact
+                |关于我们
+            li.dropdown
+              a.dropdown-toggle(href="#" data-toggle="dropdown")
+                |联系我们
             li
               a(href="blog-single-post.html")
-                |BLOG POST
-            li
+                |吐槽大会
+            //li
               a.btn-navbar(href="#downloads/bravana-responsive-website-template/?utm_source=bravanalite&utm_medium=button&utm_campaign=bravana" target="_blank")
                 span
                   i.fa.fa-rocket
