--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6004,7 +6004,7 @@ html.fullscreen-bg #wrapper {
  * ---------------*/
 .pricing-table {
   background-color: #F6F6F6;
-  border-left: 2px solid #fff;
+  border-left: 20px solid #fff;
 }
 .pricing-table .top {
   position: relative;
@@ -6752,4 +6752,19 @@ footer .right {
 .subscribe{
   border-top-left-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
+}
+
+.list-details a {
+  color:#6d6c6c;
+}
+.txtcenter{
+  text-align: center;
+  margin-top:3em;
+  margin-bottom:3em;
+}
+
+.intro{
+  font-size: 16px;
+  margin-top: 1.5em;
+  font-weight: normal;
 }
