--- a/views/index.jade
+++ b/views/index.jade
@@ -11,7 +11,7 @@ block content
           p.lead
             //- |Made
             span#rotating-words.rotating-words
-              |创造爱与 &amp; 激情, 创造你的下一个项目, 节省你宝贵的时间
+              |创造爱 &amp; 激情, 快速创建你的项目, 节省你宝贵的时间
           a.btn.btn-primary.btn-lg(href="#")
             |联系我们
           a.btn.btn-default.btn-lg(href="#")
@@ -23,9 +23,9 @@ block content
             .icon-info.icon-info-center
               i.icon.icon_lifesaver.ico-styled-md
               h3.title
-                |Free Support
+                |24小时技术支持
               p
-                |Dynamically productivate reliable action items without an expanded array.
+                |我们将为你提供24小时技术支持，解决你的后顾之忧
               //- a.more(href="#")
               //-   |Support Info
               //- i.fa.fa-angle-right
@@ -33,9 +33,9 @@ block content
             .icon-info.icon-info-center
               i.icon.icon_cloud-download_alt.ico-styled-md
               h3.title
-                |Free Future Updates
+                |网站安全保障
               p
-                |Dynamically productivate reliable action items without an expanded array.
+                |数据库安全备份 BUG检查修复。为你的网站保驾护航
               //- a.more(href="#")
               //-   |Getting an Update
               //- i.fa.fa-angle-right
@@ -43,9 +43,9 @@ block content
             .icon-info.icon-info-center
               i.icon.icon_question_alt2.ico-styled-md
               h3.title
-                |Free Support
+                |优质客户服务
               p
-                |Dynamically productivate reliable action items without an expanded array.
+                |以客户需求为基础，以自身理念方向，成就客户，即是成就我们
               //- a.more(href="#")
               //-   |Ask a Question
               //- i.fa.fa-angle-right
@@ -65,7 +65,7 @@ block content
                         |#{items.title}
                 a.btn.btn-primary(href="#{table.button.btnLink}")
                   |#{table.button.title}
-    section
+    section.case-block
       .container
         h2.txtcenter.section-heading
           |#{midTitle.title}
@@ -74,90 +74,118 @@ block content
         .row
           .col-md-4
             .icon-info.icon-info-left
-              i.icon.icon_gift.ico-styled-md.text-primary
-              .text
-                h2.title
-                  |REVOLUTION SLIDER
-                p
-                  |Holisticly harness just in time technologies via corporate scenarios. Intrinsicly
-                  | predominate ubiquitous outsourcing through an expanded array of functionalities.
+              .case
+                img(src="/images/blog/blog-med-img4.jpg")
+                .txt-abs
+                  dl
+                    dt
+                      |广州油麦菜信息科技有限公司
+                    dd
+                      |-官网
+                    dd
+                      |-Date:2018.2
           .col-md-4
             .icon-info.icon-info-left
-              i.icon.icon_heart_alt.ico-styled-md.text-primary
-              .text
-                h2.title
-                  |BEAUTIFUL DESGIN
-                p
-                  |Holisticly harness just in time technologies via corporate scenarios. Intrinsicly
-                  | predominate ubiquitous outsourcing through an expanded array of functionalities.
+              .case
+                img(src="/images/blog/blog-med-img4.jpg")
+                .txt-abs
+                  dl
+                    dt
+                      |广州油麦菜信息科技有限公司
+                    dd
+                      |-官网
+                    dd
+                      |-Date:2018.2  
           .col-md-4
             .icon-info.icon-info-left
-              i.icon.icon_lightbulb.ico-styled-md.text-primary
-              .text
-                h2.title
-                  |MULTIPURPOSE
-                p
-                  |Holisticly harness just in time technologies via corporate scenarios. Intrinsicly
-                  | predominate ubiquitous outsourcing through an expanded array of functionalities.
+              .case
+                img(src="/images/blog/blog-med-img4.jpg")
+                .txt-abs
+                  dl
+                    dt
+                      |广州油麦菜信息科技有限公司
+                    dd
+                      |-官网
+                    dd
+                      |-Date:2018.2
           .col-md-4
-            .icon-info.icon-info-left.no-margin-bottom
-              i.icon.icon_like.ico-styled-md.text-primary
-              .text
-                h2.title
-                  |FREE UPDATES &amp; SUPPORT
-                p
-                  |Holisticly harness just in time technologies via corporate scenarios. Intrinsicly
-                  | predominate ubiquitous outsourcing through an expanded array of functionalities.
+            .icon-info.icon-info-left
+              .case
+                img(src="/images/blog/blog-med-img4.jpg")
+                .txt-abs
+                  dl
+                    dt
+                      |广州油麦菜信息科技有限公司
+                    dd
+                      |-官网
+                    dd
+                      |-Date:2018.2
           .col-md-4
-            .icon-info.icon-info-left.no-margin-bottom
-              i.icon.icon_ul.ico-styled-md.text-primary
-              .text
-                h2.title
-                  |TONS OF FEATURES
-                p
-                  |Holisticly harness just in time technologies via corporate scenarios. Intrinsicly predominate
-                  | ubiquitous outsourcing through an expanded array of functionalities.
+            .icon-info.icon-info-left
+              .case
+                img(src="/images/blog/blog-med-img4.jpg")
+                .txt-abs
+                  dl
+                    dt
+                      |广州油麦菜信息科技有限公司
+                    dd
+                      |-官网
+                    dd
+                      |-Date:2018.2  
           .col-md-4
-            .icon-info.icon-info-left.no-margin-bottom
-              i.icon.icon_genius.ico-styled-md.text-primary
-              .text
-                h2.title
-                  |FLEXIBLE &amp; EASY TO USE
-                p
-                  |Holisticly harness just in time technologies via corporate scenarios. Intrinsicly 
-                  |predominate ubiquitous outsourcing through an expanded array of functionalities.
-    section
+            .icon-info.icon-info-left
+              .case
+                img(src="/images/blog/blog-med-img4.jpg")
+                .txt-abs
+                  dl
+                    dt
+                      |广州油麦菜信息科技有限公司
+                    dd
+                      |-官网
+                    dd
+                      |-Date:2018.2
+    section.figure-show
+        .container
+          h2.txtcenter.section-heading
+            |优势之道·素谓天成
+            p.intro
+              |用心、用责、 用情、人无我有、人优我特；敬天惜福，爱人有度。
+        .row
+          .col-md-3.number-block
+            .number
+              |10+
+            .number-abs
+              |10年高端网站设计经验
+          .col-md-3.number-block
+            .number
+              |28+
+            .number-abs
+              |28+政府单位的认可
+          .col-md-3.number-block
+            .number
+              |800+
+            .number-abs
+              |800+品牌客户的选择
+          .col-md-3.number-block
+            .number
+              |5000+
+            .number-abs
+              |5000+企业客户的选择
+    seciont.news
       .container
-        h2.sr-only
-          |Testimonial
-        #testimonial-standard-carousel.testimonial-carousel.testimonial-standard-carousel.owl-carousel
-          .testimonial-standard
-            p.content
-              |"Now, this is cool! Kudos to the guys behind it."
-            .author
-              img.img-circle(src="images/testimonial-author2.png" alt="Avatar")
-              span.name
-                |Edward Freeman
-              span.title.text-muted-2x
-                |Front-end Freelancer
-          .testimonial-standard
-            p.content
-              |"Now, this is cool! Kudos to the guys behind it."
-            .author
-              img.img-circle(src="images/testimonial-author3.png" alt="Avatar")
-              span.name
-                |Edward Freeman
-              span.title.text-muted-2x
-                |Front-end Freelancer
-          .testimonial-standard
-            p.content
-              |"Now, this is cool! Kudos to the guys behind it."
-            .author
-              img.img-circle(src="images/testimonial-author4.png" alt="Avatar")
-              span.name
-                |Edward Freeman
-              span.title.text-muted-2x
-                |Front-end Freelancer
+          h2.txtcenter.section-heading
+            |油麦资讯
+            p.intro
+              a.newBtn.active(href="javascript:void(0)")
+                |公司新闻
+              a.newBtn(href="javascript:void(0)")
+                |常见问题
+      .table-page
+        .tab.active
+          |标签页一
+        .tab
+          |标签页二
+          
     section
       .container
         h2.sr-only
