--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,7 +29,4 @@ html
     script(src="/javascripts/plugins/morphext/morphext.min.js")
     script(src="/javascripts/plugins/owl-carousel/owl.carousel.min.js")
     script(src="/javascripts/bravana-lite.js")
-
-  
-      
-      
+    script(src="/javascripts/app.js")
