--- a/views/nav.jade
+++ b/views/nav.jade
@@ -4,7 +4,7 @@ nav.navbar.navbar-default.navbar-fixed-top
           span.sr-only
             |Toggle Navigation
           i.fa.fa-bars
-        a.navbar-brand(href="index.html")
+        a.navbar-brand(href="/index")
           img(src="/images/logo/logo.png" alt="Bravana Logo")
         #main-nav-collapse.collapse.navbar-collapse
           ul.nav.navbar-nav.main-navbar-nav
