--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4991,7 +4991,7 @@ div[class*="col-"] > .input-group {
 }
 
 div[class*="col-"] .icon-info {
-  margin-bottom: 50px;
+  margin-bottom: 25px;
 }
 
 .icon-info-group .icon-info {
@@ -6759,12 +6759,130 @@ footer .right {
 }
 .txtcenter{
   text-align: center;
-  margin-top:3em;
-  margin-bottom:3em;
+  margin-top:2em;
+  margin-bottom:2em;
 }
 
 .intro{
   font-size: 16px;
   margin-top: 1.5em;
   font-weight: normal;
+}
+
+.case-block{
+  background: #f7f7f7;
+}
+
+.case{
+  position: relative;
+  border: 1px solid #f7f7f7;
+}
+
+.case img{
+  width: 100%;
+}
+
+.txt-abs{
+  width:0;
+  height:0;
+  position: absolute;
+  left:0;
+  top:0;
+  padding:0em;
+  color:#FFF;
+  background: rgba(65, 188, 63,0.7);
+  transition:width 1s,height 0.5s;
+  -moz-transition:width 1s,height 0.5s; /* Firefox 4 */
+  -webkit-transition:width 0.5s,height 1s; /* Safari and Chrome */
+  -o-transition:width 1s,height 0.5s; /* Opera */
+  overflow: hidden;
+}
+
+.case:hover .txt-abs{
+  display: block;
+  width:100%;
+  height:100%;
+}
+
+.txt-abs dl{
+  width: 0px;
+  height:0px;
+  margin:1em;
+  overflow: hidden;
+  transition:width 0.4;
+  -moz-transition:width width 0.4s,height 0.4s; /* Firefox 4 */
+  -webkit-transition:width 0.4s,height 0.4s; /* Safari and Chrome */
+  -o-transition:width 0.4s,height 0.4s; /* Opera */
+  transition-delay:0.1s;
+}
+
+.case:hover dl{
+  width:100%;
+  height:100%;
+}
+
+.txt-abs dt{
+  margin-bottom: 8px;
+}
+
+.txt-abs dd{
+  margin-left: 14px;
+}
+
+.figure-show{
+  
+}
+
+.figure-show .number-block{
+  border-right: 1px solid #69b417;
+}
+
+.figure-show .number{
+  text-align: center;
+  font-weight: bold;
+  font-size: 8em;
+  color: #68b417;
+  text-decoration:line-through;
+  text-decoration-color: #FFF;
+}
+
+.number-block:last-child{
+  border-right: 0;
+}
+
+.figure-show .number-abs{
+  text-align: center;
+}
+
+.news .intro a{
+  display: inline-block;
+  margin:0 8px;
+  padding:4px 10px;
+  border-radius: 16px;
+  border:1px solid #68b417;
+}
+
+.news .intro .active{
+  color:#FFF;
+  background: #68b417;
+}
+
+.table-page{
+  position:relative;
+  width:200px;
+  height:150px;
+  border:1px solid red;
+  margin:0 auto;
+}
+
+.tab{
+  width:100%;
+  height:100%;
+  left:100%;
+  position:absolute;
+  border:1px solid green;
+}
+
+.table-page .active{
+  left:0px;
 }
