--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,49 +1,50 @@
 footer.footer-newsletter
       .container
-        .footer-top
-          h4.footer-heading
-            |Subscribe to Our Newsletter
-          p.copytext
-            |Subscribe to the newsletter to get latest news and updates about our product.
-            br
-            |Preview the latest issue 
-            a(href="#")
-              | here
-          form.newsletter-form(method="post")
-            .input-group.input-group-lg
-              input(type="email" class="form-control" name="email" placeholder="youremail@domain.com")
-              span.input-group-btn
-                button.btn.btn-primary.subscribe(type="button")
-                  i.fa.fa-spinner.fa-spin
-                  span
-                    |SUBSCRIBE
-              .alert
+        //- .footer-top
+        //-   h4.footer-heading
+        //-     |Subscribe to Our Newsletter
+        //-   p.copytext
+        //-     |Subscribe to the newsletter to get latest news and updates about our product.
+        //-     br
+        //-     |Preview the latest issue 
+        //-     a(href="#")
+        //-       | here
+        //-   form.newsletter-form(method="post")
+        //-     .input-group.input-group-lg
+        //-       input(type="email" class="form-control" name="email" placeholder="youremail@domain.com")
+        //-       span.input-group-btn
+        //-         button.btn.btn-primary.subscribe(type="button")
+        //-           i.fa.fa-spinner.fa-spin
+        //-           span
+        //-             |SUBSCRIBE
+        //-       .alert
         .footer-bottom
           .left
             nav.clearfix
               ul.list-inline
                 li
                   a(href="#")
-                    |News
+                    |首页
                 li
                   a(href="#")
-                    |Press
+                    |产品中心
                 li
                   a(href="#")
-                    |Terms &amp; Privacy
+                    |新闻资讯
                 li
                   a(href="#")
-                    |We're Hiring
+                    |联系我们
+                li
+                  a(href="#")
+                    |关于我们
+                li
+                  a(href="#")
+                    |吐槽大会
             p.copyright-text
               |&copy;2017
               a(href="#" target="_blank")
-                |The Develovers
-              |. All Rights Reserved. More Templates
-              a(href="")
-                |模板之家 
-              | - Collect from
-              a(href="#")
-                |网页模板
+                | 油麦菜信息科技有限公司
+              |. All Rights Reserved.
           ul.right.list-inline.social-icons.social-icons-bordered.social-icons-small.social-icons-fullrounded
             li
               a(href="#")
