--- a/views/index.jade
+++ b/views/index.jade
@@ -53,7 +53,7 @@ block content
       .container
         .row
           each table in pricing
-            .col-md-4.col-sm-6.pricing-table.pricing-recommended
+            .col-md-3.col-md-offset-1.col-sm-6.pricing-table.pricing-recommended
               .top
                 h3.heading
                   |#{table.title}
@@ -149,7 +149,7 @@ block content
           h2.txtcenter.section-heading
             |优势之道·素谓天成
             p.intro
-              |用心、用责、 用情、人无我有、人优我特；敬天惜福，爱人有度。
+              |用心、用责、 用情
         .row
           .col-md-3.number-block
             .number
@@ -181,30 +181,256 @@ block content
               a.newBtn(href="javascript:void(0)")
                 |常见问题
       .table-page
-        .tab.active
-          |标签页一
-        .tab
-          |标签页二
-    section
+        .tab-content
+          .tab
+            .row
+              .col-md-5.col-md-offset-1
+                ul
+                  li
+                    .date
+                      span.day
+                        |New
+                      span.line
+                      span.month
+                        |2018-4-18
+                    .new-content
+                      h4
+                        a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
+                          |签约北京也趣国际传媒广告有限公司网站建设项目
+                      p
+                        a(href="help/info.asp?lb_id=3128")
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                  li
+                    .date
+                      span.day
+                        |New
+                      span.line
+                      span.month
+                        |2018-4-18
+                    .new-content
+                      h4
+                        a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
+                          |签约北京也趣国际传媒广告有限公司网站建设项目
+                      p
+                        a(href="help/info.asp?lb_id=3128")
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                  li
+                    .date
+                      span.day
+                        |Hot
+                      span.line
+                      span.month
+                        |2018-4-18
+                    .new-content
+                      h4
+                        a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
+                          |签约北京也趣国际传媒广告有限公司网站建设项目
+                      p
+                        a(href="help/info.asp?lb_id=3128")
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                  li
+                    .date
+                      span.day
+                        |Hot
+                      span.line
+                      span.month
+                        |2018-4-18
+                    .new-content
+                      h4
+                        a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
+                          |签约北京也趣国际传媒广告有限公司网站建设项目
+                      p
+                        a(href="help/info.asp?lb_id=3128")
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+              .col-md-5.new-right-content
+                ul
+                  li
+                    a.imglink(href="help/info.asp?lb_id=2987")
+                      img(src="/images/3330.jpg")
+                    h4
+                      a(href="help/info.asp?lb_id=2987")
+                        |油麦菜信息科技有限公司,十年专注,有效才是硬道理
+                    p
+                      |做好内容营销，离不开高质量的营销内容与良好的用户体验，牢牢把握这两个重点才能够与用户有效沟通，
+                      |给用户提供有价值的内容，进而才能提升内容营销水平。
+                    .info.clearfix
+                      span
+                        |2017-11-26
+                      a(href="help/info.asp?lb_id=2987")
+                        |浏览更多
+                  li
+                    a(href="help/info.asp?lb_id=2987")
+                      img(src="/images/3330.jpg")
+                    h4
+                      a(href="help/info.asp?lb_id=2987")
+                        |油麦菜信息科技有限公司,十年专注,有效才是硬道理
+                    p
+                      |做好内容营销，离不开高质量的营销内容与良好的用户体验，牢牢把握这两个重点才能够与用户有效沟通，
+                      |给用户提供有价值的内容，进而才能提升内容营销水平。
+                    .info.clearfix
+                      span
+                        |2017-11-26
+                      a(href="help/info.asp?lb_id=2987")
+                        |浏览更多
+          .tab
+            .row
+              .col-md-5.col-md-offset-1
+                ul
+                  li
+                    .date
+                      span.day
+                        |New
+                      span.line
+                      span.month
+                        |2018-4-18
+                    .new-content
+                      h4
+                        a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
+                          |签约北京也趣国际传媒广告有限公司网站建设项目
+                      p
+                        a(href="help/info.asp?lb_id=3128")
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                  li
+                    .date
+                      span.day
+                        |New
+                      span.line
+                      span.month
+                        |2018-4-18
+                    .new-content
+                      h4
+                        a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
+                          |签约北京也趣国际传媒广告有限公司网站建设项目
+                      p
+                        a(href="help/info.asp?lb_id=3128")
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                  li
+                    .date
+                      span.day
+                        |Hot
+                      span.line
+                      span.month
+                        |2018-4-18
+                    .new-content
+                      h4
+                        a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
+                          |签约北京也趣国际传媒广告有限公司网站建设项目
+                      p
+                        a(href="help/info.asp?lb_id=3128")
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                  li
+                    .date
+                      span.day
+                        |Hot
+                      span.line
+                      span.month
+                        |2018-4-18
+                    .new-content
+                      h4
+                        a(href="help/info.asp?lb_id=3128" title="签约北京也趣国际传媒广告有限公司网站建设项目")
+                          |签约北京也趣国际传媒广告有限公司网站建设项目
+                      p
+                        a(href="help/info.asp?lb_id=3128")
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+                          |油麦菜信息科技是2006年成立的一家专业从事北京网站建设、北京网站制作的公司
+              .col-md-5.new-right-content
+                ul
+                  li
+                    a.imglink(href="help/info.asp?lb_id=2987")
+                      img(src="/images/3330.jpg")
+                    h4
+                      a(href="help/info.asp?lb_id=2987")
+                        |油麦菜信息科技有限公司,十年专注,有效才是硬道理
+                    p
+                      |做好内容营销，离不开高质量的营销内容与良好的用户体验，牢牢把握这两个重点才能够与用户有效沟通，
+                      |给用户提供有价值的内容，进而才能提升内容营销水平。
+                    .info.clearfix
+                      span
+                        |2017-11-26
+                      a(href="help/info.asp?lb_id=2987")
+                        |浏览更多
+                  li
+                    a(href="help/info.asp?lb_id=2987")
+                      img(src="/images/3330.jpg")
+                    h4
+                      a(href="help/info.asp?lb_id=2987")
+                        |油麦菜信息科技有限公司,十年专注,有效才是硬道理
+                    p
+                      |做好内容营销，离不开高质量的营销内容与良好的用户体验，牢牢把握这两个重点才能够与用户有效沟通，
+                      |给用户提供有价值的内容，进而才能提升内容营销水平。
+                    .info.clearfix
+                      span
+                        |2017-11-26
+                      a(href="help/info.asp?lb_id=2987")
+                        |浏览更多
+    section.cooperative
       .container
-        h2.sr-only
-          |OUR CLIENTS
-        p.text-center
-          |For over 5 years, we have been trusted by big companies below
+        h2.txtcenter.section-heading
+            |合作伙伴
+            p.intro
+              |他们都选择了油麦菜
         ul.list-inline.list-logo
           li
             a(href="#")
-              img(src="images/clients/logo1.png" alt="logo")
+              img(src="images/clients/20170829172903847.jpg" alt="logo")
           li
             a(href="#")
-              img(src="images/clients/logo2.png" alt="logo")
+              img(src="images/clients/20170829172912037.jpg" alt="logo")
           li
             a(href="#")
-              img(src="images/clients/logo3.png" alt="logo")
+              img(src="images/clients/20170829172922146.jpg" alt="logo")
           li
             a(href="#")
-              img(src="images/clients/logo4.png" alt="logo")
+              img(src="images/clients/20170829173100317.jpg" alt="logo")
           li
             a(href="#")
-              img(src="images/clients/logo5.png" alt="logo")
+              img(src="images/clients/20170829173112079.jpg" alt="logo")
+          li
+            a(href="#")
+              img(src="images/clients/20170829173121767.jpg" alt="logo")
+          li
+            a(href="#")
+              img(src="images/clients/20170829173145104.jpg" alt="logo")
+          li
+            a(href="#")
+              img(src="images/clients/20170829173159269.jpg" alt="logo")
+          li
+            a(href="#")
+              img(src="images/clients/20170829173832312.jpg" alt="logo")
+          li
+            a(href="#")
+              img(src="images/clients/20170829173951030.jpg" alt="logo")
+          li
+            a(href="#")
+              img(src="images/clients/20170829174049904.jpg" alt="logo")
+          li
+            a(href="#")
+              img(src="images/clients/20170829174137360.jpg" alt="logo")
+          li
+            a(href="#")
+              img(src="images/clients/20170829174243660.jpg" alt="logo")
+          li
+            a(href="#")
+              img(src="images/clients/20170829174304220.jpg" alt="logo")
+          li
+            a(href="#")
+              img(src="images/clients/20170829174457835.jpg" alt="logo")
+          li
+            a(href="#")
+              img(src="images/clients/20170829174420692.jpg" alt="logo")
     include footer
