--- a/views/index.jade
+++ b/views/index.jade
@@ -433,4 +433,20 @@ block content
           li
             a(href="#")
               img(src="images/clients/20170829174420692.jpg" alt="logo")
+    .right-nav
+      ul
+        li
+          svg.icon(aria-hidden="true")
+            use(xlink:href="#icon-weixin")
+        li
+          svg.icon(aria-hidden="true")
+            use(xlink:href="#icon-qq")
+        li
+          svg.icon(aria-hidden="true")
+            use(xlink:href="#icon-dianhua")
+        li
+          svg.icon(aria-hidden="true")
+            use(xlink:href="#icon-haoyouliebiao")
+        li
+          |TOP
     include footer
