--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html
     link(href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css")
     link(href="/stylesheets/font-awesome.min.css" rel="stylesheet" type="text/css")
     link(href="/stylesheets/elegant-icons.css" rel="stylesheet" type="text/css")
+    script(src="/fonts/alibaba/iconfont.js")
     link(href="/stylesheets/main.css" rel="stylesheet" type="text/css")
     link(href="/stylesheets/my-custom-styles.css" rel="stylesheet" type="text/css")
     link(href='https://fonts.googleapis.com/css?family=Raleway:700,400,400italic,500'
